fix distorted image in mobile 05

--- a/css/project-fcc/01-tribute-page-02.css
+++ b/css/project-fcc/01-tribute-page-02.css
@@ -62,20 +62,22 @@ html {
 }
 #img-div {
   /*center*/
-  display: flex;
-  flex-direction: row;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
   margin: 0px auto;
   max-width: 800px;
   max-height: 520px;
+  width: 100%;
+  height: auto;
 }
 #black-profile {
   /*responsive*/
-  width: 50%;
+  width: 100%;
   transform: scaleX(-1);
 }
 #red-profile {
   /*responsive*/
-  width: 50%;;
+  width: 100%;;
 }
 #img-caption {
   color: black;
